Change header 1 color

--- a/bio.css
+++ b/bio.css
@@ -5,14 +5,14 @@ h1 {
 	font-size: 20px;
 	font-weight: bold; 
 	font-style: normal;
-	color: mintcream;
+	color: aquamarine;
 }
 
 h2 {
 	text-align: center;
 	font-size: 16px; 
 	font-style: oblique;
-	color: mintcream;
+	color: aquamarine;
 	font-style: italic; 
 }
 p {
