--- a/bio.css
+++ b/bio.css
@@ -2,10 +2,10 @@
 
 h1 {
 	text-align: center;
-	font-size: 20px;
+	font-size: 18px;
 	font-weight: bold; 
 	font-style: normal;
-	color: aquamarine;
+	color: darkseagreen;
 }
 
 h2 {
@@ -13,7 +13,7 @@ h2 {
 	font-size: 16px; 
 	font-style: oblique;
 	color: aquamarine;
-	font-style: italic; 
+	font-style: darkseagreen; 
 }
 p {
 	text-align: center; 
@@ -24,5 +24,5 @@ div {
 	padding: 50px; 
 	margin: 25px;
 	border-style: solid;
-	border-color: palegreen;
+	border-color: darkseagreen;
 }
