Change coor of header 2

--- a/bio.css
+++ b/bio.css
@@ -12,8 +12,7 @@ h2 {
 	text-align: center;
 	font-size: 22px; 
 	font-style: oblique;
-	color: aquamarine;
-	font-style: darkseagreen; 
+	color: darkseagreen;
 }
 p {
 	text-align: center; 
